--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #container {
     margin-top: 10%;
     margin-left: 20%;
-    width: 500px;
+    width: 400px;
     height: 300px;
     font-family: 'Dosis', sans-serif;
     box-shadow: 1px 5px 10px whitesmoke;
@@ -50,4 +50,17 @@ h2 {
     margin-left: 10px;
     padding-top: 15px;
     color: white;
+}
+
+@media all and (max-width: 500px) {
+    #container {
+        width: 300px;
+        height: 300px;
+        font-size: 15px;
+        margin-left: 10%;
+    }
+
+    #question {
+        width: 200px;
+    }
 }
