--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://images.unsplash.com/photo-1613738053817-7f0983aa456d?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fHRhcm90fGVufDB8MHwwfHx8Mg%3D%3D');
+    background-image: url('https://images.unsplash.com/photo-1649105018159-fa1849960388?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-color: black;
     background-repeat: no-repeat;
     min-height: 100vh;
