--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 body {
-    background-image: url('https://images.unsplash.com/photo-1649105018159-fa1849960388?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-image: url('background.jpg');
     background-color: black;
     background-repeat: no-repeat;
     min-height: 100vh;
     min-height: 100vh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    justify-content: center;
+}
+
+.all {
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    align-items: center;
 }
 
 #container {
@@ -22,8 +31,10 @@ body {
     width: 300px;
     border: none;
     padding: 15px;
-    margin-left: 10px;
+    margin-top: 20px;
+    margin-left: 30px;
     resize: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #btn {
@@ -33,9 +44,10 @@ body {
     padding: 10px;
     margin-top: 15px;
     font-size: 20px;
-    margin-left: 10px;
+    margin-left: 30px;
     background-color: rgb(222, 222, 215);
     box-shadow: 2px 2px 2px grey;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #btn:hover {
@@ -50,6 +62,8 @@ h2 {
     margin-left: 10px;
     padding-top: 15px;
     color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 45px;
 }
 
 @media all and (max-width: 500px) {
@@ -57,10 +71,14 @@ h2 {
         width: 300px;
         height: 300px;
         font-size: 15px;
-        margin-left: 10%;
+        margin-left: 10px;
     }
 
     #question {
         width: 200px;
+    }
+
+    h2 {
+        font-size: 30px;
     }
 }
